--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
-    "aos": "^2.3.4",
+    "aos": "^3.0.0-beta.6",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.8",
